      with --enable-nvidia-gpus and running on a node that does not have Nvidia
      drivers installed.
  b - Change so gpu states get set/unset correctly. Fixes problems with multiple
      exclusive jobs being assigned to same gpu and where next job gets rejected
      because gpu state was not reset after last shared gpu job finished.

2.5.8
  e - added util function getpwnam_ext() that has retry and errno logging
      capability for calls to getpwnam().
  c - fix a potential segfault when using asynchronous runjob with an array slot limit
      (backported from 3.0.3)
  b - In pbs_original_connect() only the first NCONNECT entries of the connection table 
      were checked for availability. NCONNECT is defined as 10. However, the connection
      table is PBS_NET_MAX_CONNECTIONS in size. PBS_NET_MAX_CONNECTIONS is 10240. 
      NCONNECT is now defined as PBS_NET_MAX_CONNECTIONS.
  b - fix bugzilla #135, stagein was deleting directory instead of file (backported
      from 3.0.3)
	b - If the resources nodes or procs are not submitted on the qsub command line then
	    the nodes attribute does not get set. This causes a problem if procct is set on
			queues because there is no proc count available to evaluate. This fix sets
			a default nodes value of 1 if the nodes or procs resources are not requested.
  b - Made a fix with procct where initialize_procct was not properly accounting for 
      a "procs" resources.
  e - Modified default_router() to set the svr_do_schedule flag to SCH_SCHEDULE_NEW if
      a job was successfully routed to a queue. This helps reduce delays in running
      jobs when they are promoted from a routing queue to an execution queue.
  b - Made a fix with procct where initialize_procct was not properly accounting for 
      a "procs" resources.
  e - Modified default_router() to set the svr_do_schedule flag to SCH_SCHEDULE_NEW if
      a job was successfully routed to a queue. This helps reduce delays in running